--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,400italic,800,800italic,700,700italic,900,900italic" rel="stylesheet" type="text/css"/>
 <link rel="stylesheet" href="style.css">
-<style>
-</style>
 </head>
 <body>
 
@@ -14,9 +12,9 @@
   <div class="column" style="background-color:#fffff">
     <img src="images/one-funko.png" alt="funko pop that looks like me" style="height:200px;">
   </div>
-  <div class="column" style="background-color:#fffff">
+  <div class="column2" style="background-color:#fffff">
     <h2 style="font-family:poppins; line-height: 1">ANNE'S WEBSITE !</h2>
-    <p style="font-family:poppins;font-size:15px; line-height: 0.9">hello, nice to meet you. contact me via email, discord or slack and i'll get back to you as soon as possible.</p>
+    <p style="font-family:poppins;font-size:15px; line-height: 0.9"> hello, nice to meet you. contact me via email, discord or slack and i'll get back to you as soon as possible.</p>
   </div>
 </div>
 
