--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>anne's html website <3</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,400italic,800,800italic,700,700italic,900,900italic" rel="stylesheet" type="text/css"/>
 <link rel="stylesheet" href="style.css">
@@ -14,7 +15,7 @@
   </div>
   <div class="column2" style="background-color:#fffff">
     <h2 style="font-family:poppins; line-height: 0.7">ANNE'S WEBSITE !</h2>
-    <p style="font-family:poppins;font-size:15px; line-height: 0.9"> hello, nice to meet you. contact me via email, discord or slack and i'll get back to you as soon as possible.</p>
+    <p style="font-family:poppins;font-size:15px; line-height: 0.9"> hello, nice to meet you. i'm anne, i like criminology, coffee and cats. feel free to contact me via <a href="mailto:whteflr@proton.me">email</a>, discord or slack and i'll get back to you as soon as possible.</p>
   </div>
 </div>
 
