--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <img src="images/one-funko.png" alt="funko pop that looks like me" style="height:200px;">
   </div>
   <div class="column2" style="background-color:#fffff">
-    <h2 style="font-family:poppins; line-height: 0.7">ANNE'S WEBSITE !</h2>
-    <p style="font-family:poppins;font-size:15px; line-height: 0.9"> hello, nice to meet you. i'm anne, i like criminology, coffee and cats. feel free to contact me via <a href="mailto:whteflr@proton.me">email</a>, discord or slack and i'll get back to you as soon as possible.</p>
+    <h2 style="font-family:poppins; line-height: 0.7">ANNE'S WEBSITE <i>!</i></h2>
+    <p style="font-family:poppins;font-size:15px; line-height: 0.9"> hello, nice to meet you. i'm anne, i like criminology, coffee and cats. 
+      <br>
+      feel free to contact me via <a href="mailto:whteflr@proton.me" style="color:black;">email</a>, discord or slack and i'll get back to you as soon as possible.</p>
   </div>
 </div>
 
