--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-
+<div class="aligning" style="padding: 200px">
 <div class="row">
   <div class="column" style="background-color:#fffff">
     <img src="images/one-funko.png" alt="funko pop that looks like me" style="height:200px;">
@@ -19,6 +19,7 @@
       <br>
       feel free to contact me via <a href="mailto:whteflr@proton.me" style="color:black;">email</a>, discord or slack and i'll get back to you as soon as possible.</p>
   </div>
+</div>
 </div>
 
 </body>
