--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class="aligning" style="padding: 200px">
+<div class="aligning" style="padding: 200px; border: 3px solid black">
 <div class="row">
   <div class="column" style="background-color:#fffff">
     <img src="images/one-funko.png" alt="funko pop that looks like me" style="height:200px;">
