--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-<div class="aligning" style="padding: 200px; border: 3px solid black">
+<div class="aligning" style="padding: 200px 0;">
+  <div class="border" style="border: 3px solid black">
 <div class="row">
   <div class="column" style="background-color:#fffff">
     <img src="images/one-funko.png" alt="funko pop that looks like me" style="height:200px;">
@@ -20,6 +21,7 @@
       feel free to contact me via <a href="mailto:whteflr@proton.me" style="color:black;">email</a>, discord or slack and i'll get back to you as soon as possible.</p>
   </div>
 </div>
+  </div>
 </div>
 
 </body>
