--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>anne's html website <3</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,400italic,800,800italic,700,700italic,900,900italic" rel="stylesheet" type="text/css"/>
+<link rel="shortcut icon" href="images/gradient.jpg"  type="image/jpg"/>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
