--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   </div>
   <div class="column2" style="background-color:#fffff">
     <h2 style="font-family:poppins; line-height: 0.7">ANNE'S WEBSITE <i>!</i></h2>
-    <p style="font-family:poppins;font-size:15px; line-height: 0.9"> hello, nice to meet you. i'm anne, i like criminology, coffee and cats. i design, read feminist theory, make music and learn different languages for fun and have recently started getting into tech.
+    <p style="font-family:poppins;font-size:15px; line-height: 0.9"> hello, nice to meet you. i'm anne, i like criminology, coffee and cats. i design stuff, read feminist theory, make music and learn different languages for fun and have recently started getting into tech.
       <br>
-      feel free to contact me via <a href="mailto:whteflr@proton.me" style="color:black;">email</a>, discord or slack and i'll get back to you as soon as possible. you can also see what i'm upto on my github or last.fm :)</p>
+      feel free to contact me via <a href="mailto:whteflr@proton.me" style="color:black;">email</a>, discord or slack and i'll get back to you as soon as possible. you can also see what i'm upto on my github, goodreads or last.fm</p>
   </div>
 </div>
 </div>
