--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
 
+<div class="header">
+<p><a src="#">about me</a> | <a src="#">skills</a> | <a src="#">contact me</a></p>
+</div>
 <div class="aligning" style="padding: 200px 0;">
 <div class="row">
   <div class="column" style="background-color:#fffff">
