--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 
 <div class="header">
-<p><a src="#">about me</a> | <a src="#">skills</a> | <a src="#">contact me</a></p>
+<p style="font-family:poppins; line-height: 0.7">
+  <a src="#">about me</a> | <a src="#">skills</a> | <a src="#">contact me</a></p>
 </div>
 <div class="aligning" style="padding: 200px 0;">
 <div class="row">
