--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <p style="font-family:poppins; line-height: 0.7">
   <a src="#">about me</a> | <a src="#">skills</a> | <a src="#">contact me</a></p>
 </div>
-<div class="aligning" style="padding: 200px 0;">
+<div class="aligning" style="padding: 20px 0;">
 <div class="row">
   <div class="column" style="background-color:#fffff">
     <img src="images/one-funko.png" alt="funko pop that looks like me" style="height:250px;">
   </div>
   <div class="column2" style="background-color:#fffff">
-    <h2 style="font-family:poppins; line-height: 0.7">ANNE'S WEBSITE <i>!</i></h2>
-    <p style="font-family:poppins;font-size:15px; line-height: 0.9"> hello, nice to meet you. i'm anne, i like criminology, coffee and cats. i design stuff, read feminist theory, make music and learn different languages for fun and have recently started getting into tech.
+    <h2 style="font-family:poppins; line-height: 0.7">HI, I'M ANNE <i>!</i></h2>
+    <p style="font-family:poppins;font-size:15px; line-height: 0.9"> i'm a high school senior from india hoping to move out and pursue a career in cybercriminal law. i design stuff, read feminist theory, make music and learn different languages for fun and have recently started getting into tech.
       <br>
       feel free to contact me via <a href="mailto:whteflr@proton.me" style="color:black;">email</a>, discord or slack and i'll get back to you as soon as possible. you can also see what i'm upto on my github, goodreads or last.fm</p>
   </div>
