--- a/index.html
+++ b/index.html
@@ -20,9 +20,19 @@
   </div>
   <div class="column2" style="background-color:#fffff">
     <h2 style="font-family:poppins; line-height: 0.7">HI, I'M ANNE <i>!</i></h2>
-    <p style="font-family:poppins;font-size:15px; line-height: 0.9"> i'm a high school senior from india hoping to move out and pursue a career in cybercriminal law. i design stuff, read feminist theory, make music and learn different languages for fun and have recently started getting into tech.
+    <p style="font-family:poppins;font-size:15px; line-height: 0.9"> i'm a <b>high school senior</b> from india graduating in december '24. my pronouns are she/her and i'm hoping to pursue a career in cybercriminal law while advocating for disability rights. 
+    i've only recently started getting tech and hackclub's #arcade has been one of my main motivators throughout the summer.
+    <br><br>
+    i'm into some basic design stuff, and enjoy listening to indie music, playing the piano, learning foreign languages (i speak five!) and reading murder mysteries and feminist theory. i've been trying to get into music production (using ableton) and am currently experimenting with different styles to try to figure out what suits "me" (aka my brand, i guess). i love drinking coffee and diet coke and petting cats from a safe distance :D
+      <br><br>
+      i'm <b> currently working </b> with figma, procreate, ibispaint, canva, blender and adobe illustrator and i'm pretty much a beginner even though i enjoy drawing a lot. since i have nothing else to do all summer long, i'm pretty much staring at my screen the entire day.
+      <br> 
       <br>
-      feel free to contact me via <a href="mailto:whteflr@proton.me" style="color:black;">email</a>, discord or slack and i'll get back to you as soon as possible. you can also see what i'm upto on my github, goodreads or last.fm</p>
+      i'm <b>currently working on</b> my hack club #arcade scrapbook projects (for onboard, fraps and boba drops) and keeping up my #100daysofcode streak while practicing problems through online courses and code challenges. i'm interested in building my portfolio so i'm also working on a few personal projects that are not tech related.
+      <br><br>
+      i'm <b> currently learning </b> html, css, and vanilla javascript, the basics of python, introductory cybersecurity concepts and introductory electronics with printed circuit boards and circuit simulations. i've recently transitioned to linux and am working my way around it while reading up on data privacy and cyberspace law.
+      <br><br>
+      feel free to contact me via <a href="mailto:whteflr@proton.me" style="color:black;">email</a>, discord or slack and i'll get back to you as soon as possible. </p>
   </div>
 </div>
 </div>
