--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   </div>
   <div class="column2" style="background-color:#fffff">
     <h2 style="font-family:poppins; line-height: 0.7">HI, I'M ANNE <i>!</i></h2>
-    <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b>high school senior</b> from india graduating in december '24. my pronouns are she/her and i'm hoping to pursue a career in cybercriminal law while advocating for disability rights. 
-    i've only recently started getting tech and hackclub's #arcade has been one of my main motivators throughout the summer.
-i'm into basic design stuff & enjoy listening to indie music, playing the piano, and learning foreign languages (i speak five!).
+    <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b>high school senior</b> from india graduating in december '24. my pronouns are she/her and i'm hoping to pursue a career in cybercriminal law while advocating for women's and disability rights. 
+      <br><br>
+    i've only recently started getting tech and hackclub's #arcade has been one of my main motivators throughout the summer. i'm into basic design stuff; enjoy listening to indie music, playing the piano, and learning foreign languages (i speak five!).
       <br><br>
       i'm <b> currently working </b> with figma, procreate, ibispaint, canva, blender and adobe illustrator and i'm pretty much a beginner even though i enjoy drawing a lot. since i have nothing else to do all summer long, i'm pretty much staring at my screen the entire day.
       <br> 
