--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
   <div class="column2" style="background-color:#fffff">
     <h2 style="font-family:poppins; line-height: 0.7">HI, I'M ANNE <i>!</i></h2>
-    <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b>high school senior</b> from india graduating in december '24. my pronouns are she/her and i'm hoping to pursue a career in cybercriminal law while advocating for women's and disability rights. 
+    <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b>high school senior</b> graduating in december '24. my pronouns are she/her/hers 🏳️‍🌈♿ and i'm a non traditional student hoping to pursue a criminal justice major in college to eventually establish a career in cybercriminal law.
       <br><br>
     i've only recently started getting tech and hackclub's #arcade has been one of my main motivators throughout the summer. i'm into basic design stuff; enjoy listening to indie music, playing the piano, and learning foreign languages (i speak five!).
       <br><br>
