--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
   <div class="column2" style="background-color:#fffff">
     <h2 style="font-family:poppins; line-height: 0.7">HI, I'M ANNE <i>!</i></h2>
-    <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b>high school senior</b> graduating in december '24. my pronouns are she/her/hers 🏳️‍🌈♿ and i'm a non traditional student hoping to pursue a criminal justice major in college to eventually establish a career in cybercriminal law.
+    <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b>high school senior</b> graduating in december '24. my pronouns are she/her 🏳️‍🌈♿ and i'm a non traditional student hoping to pursue a criminal justice major in college to eventually establish a career in cybercriminal law.
       <br><br>
     i've only recently started getting tech and hackclub's #arcade has been one of my main motivators throughout the summer. i'm into basic design stuff; enjoy listening to indie music, playing the piano, and learning foreign languages (i speak five!).
       <br><br>
@@ -31,9 +31,9 @@
       <br><br>
       i'm <b> currently learning </b> html, css, and vanilla javascript, the basics of python, introductory cybersecurity concepts and introductory electronics with printed circuit boards and circuit simulations. i've recently transitioned to linux and am working my way around it while reading up on data privacy and cyberspace law.
       <br><br>
-      i love listening to taylor swift, reading feminist theory and watching true crime documentaries. i've been trying to get into music production (using ableton) and am currently experimenting with different styles to try to figure out what suits "me" (aka my brand, i guess). i love drinking coffee, diet coke and petting cats from a safe distance :D
+      i love listening to taylor swift, reading feminist theory and watching true crime documentaries. i've been trying to get into music production (using ableton) and am currently experimenting with different styles to try to figure out what suits "me" (aka my brand, i guess). i love drinking coffee and diet coke, eating italian and chinese food and petting cats from a safe distance :D
       <br><br>
-      feel free to contact me via <a href="mailto:whteflr@proton.me" style="color:black;">email</a>, discord or slack and i'll get back to you as soon as possible. </p>
+      feel free to contact me via <a href="mailto:whteflr@proton.me" style="color:black;">email</a>, discord or <a src="https://hackclub.slack.com/team/U07BBK4KHUK">slack</a> and i'll get back to you as soon as possible. </p>
   </div>
 </div>
 </div>
