--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     <img src="images/one-funko.png" alt="funko pop that looks like me" style="height:450px;">
   </div>
   <div class="column2" style="background-color:#fffff">
-    <h2 style="font-family:poppins; line-height: 0.7; font-size:28px;">HI, I'M ANNE <i>!</i></h2>
+<!--     <h2 style="font-family:poppins; line-height: 0.7; font-size:28px;">HI, I'M ANNE <i>!</i></h2> -->
 <!--     <p style="font-size:20px; font-family:poppins; line-height:0.7;">HELLO, I'M ANNE :) <p style="font-size:17px;"> she/her </p> </p> -->
+   <h2 style="font-family:poppins; line-height: 0.7; font-size:30px;">HI, I'M ANNE <i>!</i> <span style="color:grey"></span></h2>
+    
     <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b>high school senior</b> graduating in december '24. my pronouns are she/her 🏳️‍🌈♿ and i'm a non traditional student located in india hoping to pursue a criminal justice major in college to eventually establish a career in cybercriminal law.
       <br><br>
     i've only recently started getting tech and hackclub's #arcade has been one of my main motivators throughout the summer. i'm into basic design stuff; enjoy listening to indie music, playing the piano, and learning foreign languages (i speak five!).
