--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="header">
 <p style="font-family:poppins; line-height: 0.9">
-  <a src="#">about me</a> | <a src="#">skills</a> | <a src="#">contact me</a></p>
+  <a href="#">about me</a> | <a href="#">skills</a> | <a href="#">contact me</a></p>
 </div>
 <div class="aligning" style="padding: 20px 0;">
 <div class="row">
@@ -34,9 +34,9 @@
       <br><br>
       i'm <b> currently learning </b> html, css, and vanilla javascript, the basics of python, introductory cybersecurity concepts and introductory electronics with printed circuit boards and circuit simulations. i've recently transitioned to linux and am working my way around it while reading up on data privacy and cyberspace law.
       <br><br>
-      i love listening to taylor swift, reading feminist theory and watching true crime documentaries. i've been trying to get into music production (using ableton) and am currently experimenting with different styles to try to figure out what suits "me" (aka my brand, i guess). i love drinking coffee and diet coke, eating italian and chinese food and pspspsping at cute cats (w/o petting them) from a safe distance :D
+      i love listening to taylor swift, reading feminist theory and watching true crime documentaries. i exclusively enjoy classic law-related films and whodunit police procedurals with comedy elements (like psych, ncis and the mentalist) and try to keep up with latest pop culture updates. i've been trying to get into music production (using ableton) and am currently experimenting with different styles to try to figure out what suits "me" (aka my brand, i guess). i love drinking coffee and diet coke, eating italian and chinese food and pspspsping at cute cats (w/o petting them) from a safe distance :D
       <br><br>
-      feel free to contact me via <a href="mailto:whteflr@proton.me" style="color:black;">email</a>, discord or <a src="https://hackclub.slack.com/team/U07BBK4KHUK">slack</a> and i'll get back to you as soon as possible. </p>
+      feel free to contact me via <a href="mailto:whteflr@proton.me" style="color:black;">email</a>, discord or <a href="https://hackclub.slack.com/team/U07BBK4KHUK">slack</a> and i'll get back to you as soon as possible. </p>
   </div>
 </div>
 </div>
