--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="header">
 <p style="font-family:poppins; line-height: 0.9">
-  <a href="#">about me</a> | <a href="#">skills</a> | <a href="#">contact me</a></p>
+  <a href="#" style="color:white;">about me</a> | <a href="#" style="color:white;">skills</a> | <a href="#" style="color:white;">contact me</a></p>
 </div>
 <div class="aligning" style="padding: 20px 0;">
 <div class="row">
@@ -21,7 +21,7 @@
   <div class="column2" style="background-color:#fffff">
 <!--     <h2 style="font-family:poppins; line-height: 0.7; font-size:28px;">HI, I'M ANNE <i>!</i></h2> -->
 <!--     <p style="font-size:20px; font-family:poppins; line-height:0.7;">HELLO, I'M ANNE :) <p style="font-size:17px;"> she/her </p> </p> -->
-   <h2 style="font-family:poppins; line-height: 0.7; font-size:30px;">HI, I'M ANNE <i>!</i> <span style="color:grey"> she/her </span></h2>
+   <h2 style="font-family:poppins; line-height: 0.5; font-size:30px;">HI, I'M ANNE <i>!</i> <span style="color:#808080; font-size:20px"> she/her </span></h2>
     
     <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b>high school senior</b> graduating in december '24. my pronouns are she/her 🏳️‍🌈♿ and i'm a non traditional student located in india hoping to pursue a criminal justice major in college to eventually establish a career in cybercriminal law.
       <br><br>
@@ -36,7 +36,7 @@
       <br><br>
       i love listening to taylor swift, reading feminist theory and watching true crime documentaries. i exclusively enjoy classic law-related films and whodunit police procedurals with comedy elements (like psych, ncis and the mentalist) and try to keep up with latest pop culture updates. i've been trying to get into music production (using ableton) and am currently experimenting with different styles to try to figure out what suits "me" (aka my brand, i guess). i love drinking coffee and diet coke, eating italian and chinese food and pspspsping at cute cats (w/o petting them) from a safe distance :D
       <br><br>
-      feel free to contact me via <a href="mailto:whteflr@proton.me" style="color:black;">email</a>, discord or <a href="https://hackclub.slack.com/team/U07BBK4KHUK">slack</a> and i'll get back to you as soon as possible. </p>
+      feel free to contact me via <a href="mailto:whteflr@proton.me" style="color:black;">email</a>, discord or <a href="https://hackclub.slack.com/team/U07BBK4KHUK" style="color:black;">slack</a> and i'll get back to you as soon as possible. </p>
   </div>
 </div>
 </div>
