--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 
-<div class="header" style="padding: 20px 0;">
+<div class="header" style="padding: 0 20px;">
 <p style="font-family:poppins; line-height: 0.9">
   <a href="#" style="color:white;">about me</a> | <a href="#" style="color:white;">skills</a> | <a href="#" style="color:white;">contact me</a></p>
 </div>
-<div class="aligning" style="padding: 0 20px;">
+<div class="aligning" style="padding: 20px 0;">
 <div class="row">
   <div class="column" style="background-color:#fffff">
 <!--     <img src="images/one-funko.png" alt="funko pop that looks like me" style="height:450px;"> -->
