--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="row">
   <div class="column" style="background-color:#fffff">
 <!--     <img src="images/one-funko.png" alt="funko pop that looks like me" style="height:450px;"> -->
-<img src="images/38c1b424258b6a5d7bdc69600d73264b.jpg" alt="funko pop that looks like me" style="height:475px;">
+<img src="images/38c1b424258b6a5d7bdc69600d73264b.jpg" alt="art" style="height:475px;">
   </div>
   <div class="column2" style="background-color:#fffff">
 <!--     <h2 style="font-family:poppins; line-height: 0.7; font-size:28px;">HI, I'M ANNE <i>!</i></h2> -->
@@ -31,11 +31,13 @@
       i'm <b> currently working </b> with figma, procreate, ibispaint, canva, blender and adobe illustrator and i'm pretty much a beginner even though i enjoy drawing a lot. since i have nothing else to do all summer long, i'm pretty much staring at my screen the entire day.
       <br> 
       <br>
-      i'm <b>currently working on</b> my hack club #arcade scrapbook projects (for onboard, fraps and boba drops) and keeping up my #100daysofcode streak while practicing problems through online courses and code challenges. i'm interested in building my portfolio so i'm also working on a few personal projects that are not tech related.
+      i'm <b>currently working on</b> my hack club #arcade scrapbook projects (for onboard, fraps and boba drops) and keeping up my #100daysofcode streak while practicing problems through online courses and code challenges. i'm interested in building my portfolio on a holistic level so i'm also working on a few personal projects that are not tech related at all. 
+      <br>
+  these do include my music ventures since i've been trying to get into music production (using ableton) and am currently experimenting with visual synth and different styles to try to figure out what suits "me" (aka my brand, i guess).
       <br><br>
       i'm <b> currently learning </b> html, css, and vanilla javascript, the basics of python, introductory cybersecurity concepts and introductory electronics with printed circuit boards and circuit simulations. i've recently transitioned to linux and am working my way around it while reading up on data privacy and cyberspace law.
       <br><br>
-      i love listening to taylor swift, reading feminist theory and watching true crime documentaries. i exclusively enjoy whodunit police procedurals or legal films and try to keep up with some of the latest pop culture trends. ps. the key word here is "try". i've been trying to get into music production (using ableton) and am currently experimenting with different styles to try to figure out what suits "me" (aka my brand, i guess). i love drinking iced coffee and diet coke multiple times throughout the day and pspspsping at cute cats (w/o petting them) from a safe distance :D
+      i love listening to taylor swift, reading feminist theory and watching true crime documentaries. i exclusively enjoy whodunit police procedurals or legal films and try to keep up with some of the latest pop culture trends. ps. the key word here is "try". i love drinking iced coffee and diet coke  and petting cute cats i see when im out :D
       <br><br>
       feel free to contact me via <a href="mailto:whteflr@proton.me" style="color:black;">email</a>, discord or <a href="https://hackclub.slack.com/team/U07BBK4KHUK" style="color:black;">slack</a> and i'll get back to you as soon as possible. </p>
   </div>
