--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <br><br>
       i'm <b> currently learning </b> html, css, and vanilla javascript, the basics of python, introductory cybersecurity concepts and introductory electronics with printed circuit boards and circuit simulations. i've recently transitioned to linux and am working my way around it while reading up on data privacy and cyberspace law.
       <br><br>
-      i love listening to taylor swift, reading feminist theory and watching true crime documentaries. i exclusively enjoy whodunit police procedurals or legal films and try to keep up with some of the latest pop culture trends. ps. the key word here is "try". i love drinking iced coffee and diet coke  and petting cute cats i see when im out :D
+      i love listening to taylor swift, reading feminist theory and watching true crime documentaries. i exclusively enjoy films and whodunit police procedurals and try to keep up with some of the latest pop culture trends. ps. the key word here is "try". i love drinking iced tea, coffee and diet coke, eating chinese or italian food and petting  cats i see when im out :D
       <br><br>
       feel free to contact me via <a href="mailto:whteflr@proton.me" style="color:black;">email</a>, discord or <a href="https://hackclub.slack.com/team/U07BBK4KHUK" style="color:black;">slack</a> and i'll get back to you as soon as possible. </p>
   </div>
