--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <br><br>
       i love listening to taylor swift, reading feminist theory and watching true crime documentaries. i exclusively enjoy films and whodunit police procedurals and try to keep up with some of the latest pop culture trends. ps. the key word here is "try". i love drinking iced tea, coffee and diet coke, eating chinese or italian food and petting  cats i see when im out :D
       <br><br>
-      you can also find me on <a href="pinterest.com/4noushkabh" style="color:black;">pinterest</a>, goodreads, <a href="github.com/arsoninstigator" style="color:black;">github</a> or stats.fm/spotify. feel free to contact me via <a href="mailto:whteflr@proton.me" style="color:black;">email</a>, discord or <a href="https://hackclub.slack.com/team/U07BBK4KHUK" style="color:black;">slack</a> and i'll get back to you as soon as possible. </p>
+      you can also find me on <a href="pinterest.com/4noushkabh" style="color:black;">pinterest</a>, goodreads, <a href="github.com/arsoninstigator" style="color:black;">github</a>, letterboxd or spotify. feel free to ask me for my socials or contact me via <a href="mailto:whteflr@proton.me" style="color:black;">email</a>, discord or <a href="https://hackclub.slack.com/team/U07BBK4KHUK" style="color:black;">slack</a> and i'll get back to you as soon as possible. </p>
   </div>
 </div>
 </div>
