--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div class="header" style="padding: 3.5px 25px;">
+<div class="header" style="padding: 2.7px 25px;">
 <p style="font-family:poppins; line-height: 0.9">
   <a href="#" style="color:white;">about me</a> | <a href="#" style="color:white;">skills</a> | <a href="#" style="color:white;">contact me</a></p>
 </div>
@@ -23,7 +23,7 @@
   <div class="column2" style="background-color:#fffff">
 <!--     <h2 style="font-family:poppins; line-height: 0.7; font-size:28px;">HI, I'M ANNE <i>!</i></h2> -->
 <!--     <p style="font-size:20px; font-family:poppins; line-height:0.7;">HELLO, I'M ANNE :) <p style="font-size:17px;"> she/her </p> </p> -->
-   <h2 style="font-family:poppins; line-height: 0.5; font-size:30px;">HI, I'M ANNE <i>!</i> <span style="color:#c4c2c2; font-size:18px"> sheher </span></h2>
+   <h2 style="font-family:poppins; line-height: 0.4; font-size:30px;">HI, I'M ANNE <i>!</i> <span style="color:#c4c2c2; font-size:20px"> (she her) </span></h2>
     
     <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b>high school senior</b> graduating in december '24 🏳️‍🌈♿. i'm a non traditional student from india hoping to pursue a criminal justice major in college to eventually establish a career in cybercriminal law.
       <br><br>
