--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <title>anne on da web <3</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Amethysta&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,400italic,800,800italic,700,700italic,900,900italic" rel="stylesheet" type="text/css"/>
 <link rel="shortcut icon" href="images/gradient.jpg"  type="image/jpg"/>
 <link rel="stylesheet" href="style.css">
@@ -23,7 +26,7 @@
   <div class="column2" style="background-color:#fffff">
 <!--     <h2 style="font-family:poppins; line-height: 0.7; font-size:28px;">HI, I'M ANNE <i>!</i></h2> -->
 <!--     <p style="font-size:20px; font-family:poppins; line-height:0.7;">HELLO, I'M ANNE :) <p style="font-size:17px;"> she/her </p> </p> -->
-   <h2 style="font-family:poppins; line-height: 0.4; font-size:30px;">HI, I'M ANNE <i>!</i> <span style="color:#c4c2c2; font-size:20px"> (she her) </span></h2>
+   <h2 style="font-family:poppins; line-height: 0.4; font-size:30px;">HI, I'M ANNE <i>!</i> <span style="color:#c4c2c2; font-size:20px; font-family:Amethysta;"> (sheher) </span></h2>
     
     <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b>high school senior</b> graduating in december '24 🏳️‍🌈♿. i'm a non traditional student from india hoping to pursue a criminal justice major in college to eventually establish a career in cybercriminal law.
       <br><br>
