--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div class="header" style="padding: 2.7px 25px;">
 <p style="font-family:poppins; line-height: 0.9">
-  <a href="#" style="color:white;">about me</a> | <a href="#" style="color:white;">skills</a> | <a href="#" style="color:white;">contact me</a></p>
+  <a href="#" style="color:white;">about me</a> | <a href="#" style="color:white;">skills</a> | <a href="#contactme" style="color:white;">contact me</a></p>
 </div>
 <div class="aligning" style="padding: 20px 0;">
 <div class="row">
@@ -35,15 +35,16 @@
       i'm <b> currently working </b> with figma, procreate, ibispaint, canva, blender and adobe illustrator and i'm pretty much a beginner even though i enjoy drawing a lot. since i have nothing else to do all summer long, i'm pretty much staring at my screen the entire day.
       <br> 
       <br>
-      i'm <b>currently working on</b> my hack club #arcade scrapbook projects (for onboard, fraps and boba drops) and keeping up my #100daysofcode streak while practicing problems through online courses and code challenges. i'm interested in building my portfolio on a holistic level so i'm also working on a few personal projects that are not tech related at all. 
-      <br>
-  these do include my music ventures since i've been trying to get into music production (using ableton) and am currently experimenting with visual synth and different styles to try to figure out what suits "me" (aka my brand, i guess).
+      i'm <b>currently working on</b> my hack club #arcade scrapbook projects (for onboard, fraps and boba drops) and keeping up my #100daysofcode streak while practicing problems through online courses and code challenges. i'm interested in building my portfolio on a holistic level so i'm also working on a few personal projects that are not tech related as well. 
+  these include my music ventures since i've been trying to get into music production (using ableton) and am currently experimenting with visual synth and different styles to try to figure out what suits "me" (aka my brand, i guess).
       <br><br>
       i'm <b> currently learning </b> html, css, and vanilla javascript, the basics of python, introductory cybersecurity concepts and introductory electronics with printed circuit boards and circuit simulations. i've recently transitioned to linux and am working my way around it while reading up on data privacy and cyberspace law.
       <br><br>
       i love listening to taylor swift, reading feminist theory and watching true crime documentaries. i exclusively enjoy films and whodunit police procedurals and try to keep up with some of the latest pop culture trends. ps. the key word here is "try". i love drinking iced tea, coffee and diet coke, eating chinese or italian food and petting  cats i see when im out :D
       <br><br>
-      you can also find me on <a href="pinterest.com/4noushkabh" style="color:black;">pinterest</a>, goodreads, <a href="github.com/arsoninstigator" style="color:black;">github</a>, letterboxd or spotify. feel free to ask me for my socials or contact me via <a href="mailto:whteflr@proton.me" style="color:black;">email</a>, discord or <a href="https://hackclub.slack.com/team/U07BBK4KHUK" style="color:black;">slack</a> and i'll get back to you as soon as possible. </p>
+      <div id="#contactme">
+      you can also find me on <a href="pinterest.com/4noushkabh" style="color:black;">pinterest</a>, goodreads, <a href="github.com/arsoninstigator" style="color:black;">github</a>, letterboxd or spotify. feel free to ask me for my socials or contact me via <a href="mailto:arsoninstigator@proton.me" style="color:black;">email</a>, discord or <a href="https://hackclub.slack.com/team/U07BBK4KHUK" style="color:black;">slack</a> and i'll get back to you as soon as possible. </div>
+      </p>
   </div>
 </div>
 </div>
