--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
 <body>
 
 <div class="header" style="padding: 2.7px 25px;">
+  <div class="row2">
+    <div class="column left" style="text-align:left"> 
+      <img src="images/homeart.jpg" alt="art" style="height:40px;">
+    </div>
+    <div class="column right" style="text-align:right">
 <p style="font-family:poppins; line-height: 0.9">
   <a href="#" style="color:white;">about me</a> | <a href="#" style="color:white;">skills</a> | <a href="#contactme" style="color:white;">contact me</a></p>
+    </div>
+  </div>
 </div>
+
+  
 <div class="aligning" style="padding: 20px 0;">
 <div class="row">
   <div class="column" style="background-color:#fffff">
