--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   
 <div class="aligning" style="padding: 20px 0;">
 <div class="row">
-  <div class="column" style="background-color:#fffff">
+  <div class="column1" style="background-color:#fffff">
 <!--     <img src="images/one-funko.png" alt="funko pop that looks like me" style="height:450px;"> -->
 <!-- <img src="images/38c1b424258b6a5d7bdc69600d73264b.jpg" alt="art" style="height:475px;"> -->
     <img src="images/homeart.jpg" alt="art" style="height:490px;">
