--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
 <div class="header" style="padding: 2.7px 25px;">
   <div class="row2">
-    <div class="column left" style="text-align:left"> 
-      <img src="images/homeart.jpg" alt="art" style="height:40px;">
+    <div class="column left"> 
+      <img src="images/homeart.jpg" alt="art" style="height:40px; text-align:left">
     </div>
-    <div class="column right" style="text-align:right">
-<p style="font-family:poppins; line-height: 0.9">
+    <div class="column right">
+<p style="font-family:poppins; line-height: 0.9; text-align:right">
   <a href="#" style="color:white;">about me</a> | <a href="#" style="color:white;">skills</a> | <a href="#contactme" style="color:white;">contact me</a></p>
     </div>
   </div>
