--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="header" style="padding: 2.7px 25px;">
   <div class="row2">
     <div class="column left"> 
-      <img src="images/logo-2.svg" alt="art" style="height:20px; text-align:left">
+      <img src="images/logo.svg" alt="art" style="height:80px; text-align:left">
     </div>
     <div class="column right">
 <p style="font-family:poppins; line-height: 0.9; text-align:right">
