--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>anne on da web <3</title>
+  <title>anne on da web</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,15 +13,15 @@
 <body>
 
 <div class="header" style="padding: 2.7px 25px;">
-  <div class="row2">
+<!--   <div class="row2">
     <div class="column left"> 
       <img src="images/logo.svg" alt="art" style="height:80px; text-align:left">
     </div>
-    <div class="column right">
+    <div class="column right"> -->
 <p style="font-family:poppins; line-height: 0.9; text-align:right">
   <a href="#" style="color:white;">about me</a> | <a href="#" style="color:white;">skills</a> | <a href="#contactme" style="color:white;">contact me</a></p>
-    </div>
-  </div>
+<!-- </div> 
+  </div> -->
 </div>
 
   
