--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <img src="images/logo.svg" alt="art" style="height:80px; text-align:left">
     </div>
     <div class="column right"> -->
-<p style="font-family:poppins; line-height: 0.9; text-align:right">
+<p style="font-family:poppins; line-height: 0.9;">
   <a href="#" style="color:white;">about me</a> | <a href="#" style="color:white;">skills</a> | <a href="#contactme" style="color:white;">contact me</a></p>
 <!-- </div> 
   </div> -->
@@ -27,7 +27,7 @@
   
 <div class="aligning" style="padding: 20px 0;">
 <div class="row">
-  <div class="column1" style="background-color:#fffff">
+  <div class="column" style="background-color:#fffff">
 <!--     <img src="images/one-funko.png" alt="funko pop that looks like me" style="height:450px;"> -->
 <!-- <img src="images/38c1b424258b6a5d7bdc69600d73264b.jpg" alt="art" style="height:475px;"> -->
     <img src="images/homeart.jpg" alt="art" style="height:490px;">
