--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <img src="images/logo.svg" alt="art" style="height:80px; text-align:left">
     </div>
     <div class="column right"> -->
-<p style="font-family:poppins; line-height: 0.9;">
-  <a href="#" style="color:white;">about me</a> | <a href="#" style="color:white;">skills</a> | <a href="#contactme" style="color:white;">contact me</a></p>
+<p style="font-family:poppins; line-height: 0.9; text-align:right">
+  <a href="#" style="color:white;">about me</a> | <a href="#" style="color:white;">skills</a> | <a href="#contactme" style="color:white;">contact me &#128140;</a></p>
 <!-- </div> 
   </div> -->
 </div>
