--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
 <!--     <p style="font-size:20px; font-family:poppins; line-height:0.7;">HELLO, I'M ANNE :) <p style="font-size:17px;"> she/her </p> </p> -->
    <h2 style="font-family:poppins; line-height: 0.4; font-size:30px;">HI, I'M ANNE <i>!</i> <span style="color:#c4c2c2; font-size:20px; font-family:Amethysta;"> (sheher) </span></h2>
     
-    <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b>high school senior</b> graduating in december '24 🏳️‍🌈♿. i'm a non traditional student from india hoping to pursue a criminal justice major in college to eventually establish a career in cybercriminal law.
+    <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b class="under">high school senior</b> graduating in december '24 🏳️‍🌈♿. i'm a non traditional student from india hoping to pursue a criminal justice major in college to eventually establish a career in cybercriminal law.
       <br><br>
     i've only recently started getting tech and hackclub's #arcade has been one of my main motivators throughout the summer. i'm into basic design stuff; enjoy listening to indie music, playing the piano, and learning foreign languages (i speak five!).
       <br><br>
-      i'm <b> currently working </b> with figma, procreate, ibispaint, canva, blender and adobe illustrator and i'm pretty much a beginner even though i enjoy drawing a lot. since i have nothing else to do all summer long, i'm pretty much staring at my screen the entire day.
+      i'm <b class="under"> currently working </b> with figma, procreate, ibispaint, canva, blender and adobe illustrator and i'm pretty much a beginner even though i enjoy drawing a lot. since i have nothing else to do all summer long, i'm pretty much staring at my screen the entire day.
       <br> 
       <br>
-      i'm <b>currently working on</b> my hack club #arcade scrapbook projects (for onboard, fraps and boba drops) and keeping up my #100daysofcode streak while practicing problems through online courses and code challenges. i'm interested in building my portfolio on a holistic level so i'm also working on a few personal projects that are not tech related as well. 
+      i'm <b class="under">currently working on</b> my hack club #arcade scrapbook projects (for onboard, fraps and boba drops) and keeping up my #100daysofcode streak while practicing problems through online courses and code challenges. i'm interested in building my portfolio on a holistic level so i'm also working on a few personal projects that are not tech related as well. 
   these include my music ventures since i've been trying to get into music production (using ableton) and am currently experimenting with visual synth and different styles to try to figure out what suits "me" (aka my brand, i guess).
       <br><br>
-      i'm <b> currently learning </b> html, css, and vanilla javascript, the basics of python, introductory cybersecurity concepts and introductory electronics with printed circuit boards and circuit simulations. i've recently transitioned to linux and am working my way around it while reading up on data privacy and cyberspace law.
+      i'm <b class="under"> currently learning </b> html, css, and vanilla javascript, the basics of python, introductory cybersecurity concepts and introductory electronics with printed circuit boards and circuit simulations. i've recently transitioned to linux and am working my way around it while reading up on data privacy and cyberspace law.
       <br><br>
       i love listening to taylor swift, reading feminist theory and watching true crime documentaries. i exclusively enjoy films and whodunit police procedurals and try to keep up with some of the latest pop culture trends. ps. the key word here is "try". i love drinking iced tea, coffee and diet coke, eating chinese or italian food and petting  cats i see when im out :D
       <br><br>
