--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
       <br><br>
     i've only recently started getting tech and hackclub's #arcade has been one of my main motivators throughout the summer. i'm into basic design stuff; enjoy listening to indie music, playing the piano, and learning foreign languages (i speak five!).
       <br><br>
-      i'm <b class="under"> currently wusing</b> figma, procreate, ibispaint, canva, blender and adobe illustrator and i'm pretty much a beginner even though i enjoy drawing a lot. since i have nothing else to do all summer long, i'm pretty much staring at my screen the entire day.
+      i'm <b class="under"> currently using</b> figma, procreate, ibispaint, canva, blender and adobe illustrator and i'm pretty much a beginner even though i enjoy drawing a lot. since i have nothing else to do all summer long, i'm pretty much staring at my screen the entire day.
       <br> 
       <br>
       i'm <b class="under">currently working on</b> my hack club #arcade scrapbook projects (for onboard, fraps and boba drops) and keeping up my #100daysofcode streak while practicing problems through online courses and code challenges. i'm interested in building my portfolio on a holistic level so i'm also working on a few personal projects that are not tech related as well. 
-  these include my music ventures since i've been trying to get into music production (using ableton) and am currently experimenting with visual synth and different styles to try to figure out what suits "me" (aka my brand, i guess).
+      these include my music ventures since i've been trying to get into music production (using ableton) and am currently experimenting with visual synth and different styles to try to figure out what suits "me" (aka my brand, i guess).
       <br><br>
       i'm <b class="under"> currently learning </b> html, css, and vanilla javascript, the basics of python, introductory cybersecurity concepts and introductory electronics with printed circuit boards and circuit simulations. i've recently transitioned to linux and am working my way around it while reading up on data privacy and cyberspace law.
       <br><br>
-      i love listening to taylor swift, reading feminist theory and watching true crime documentaries. i exclusively enjoy films and whodunit police procedurals and try to keep up with some of the latest pop culture trends. ps. the key word here is "try". i love drinking iced tea, coffee and diet coke, eating chinese or italian food and petting  cats i see when im out :D
+      i love listening to taylor swift, reading feminist theory and watching true crime documentaries. i love consuming and creating media and try to keep up with some of the latest pop culture trends. i sometimes chug like 12 cans of diet coke or energy drinks in a day and love pairing a chinese takeout dinner with a classic film or murder mystery.
       <br><br>
       
       you can also find me on <a href="pinterest.com/4noushkabh" style="color:black;">pinterest</a>, goodreads, <a href="github.com/arsoninstigator" style="color:black;">github</a>, letterboxd or spotify. feel free to ask me for my socials or contact me via <a href="mailto:arsoninstigator@proton.me" style="color:black;">email</a>, discord or <a href="https://hackclub.slack.com/team/U07BBK4KHUK" style="color:black;">slack</a> and i'll get back to you as soon as possible. </div>
