--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="column right"> -->
 <p id="hovering" style="font-family:poppins; line-height: 0.9; text-align:right;">
-  <a href="#" style="color:white;">about me</a> | <a href="#" style="color:white;">skills</a> | <a href="#contactme" style="color:white;">contact me &#128140;</a></p>
+  <a href="#" style="color:white;">about me</a> | <a href="#" style="color:white;">skills</a> | <a href="https://scrapbook.hackclub.com/anne/" style="color:white;">projects</a> | <a href="#contactme" style="color:white;">contact me &#128140;</a></p>
 <!-- </div> 
   </div> -->
 </div>
