--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   kofiWidgetOverlay.draw('fairy777', {
     'type': 'floating-chat',
     'floating-chat.donateButton.text': 'Support me',
-    'floating-chat.donateButton.background-color': '#fcbf47',
+    'floating-chat.donateButton.background-color': '#edb5b6',
     'floating-chat.donateButton.text-color': '#323842'
   });
 </script>
