--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
    <h2 style="font-family:poppins; line-height: 0.4; font-size:30px;">HI, I'M ANNE <i>!</i> <span style="color:#c4c2c2; font-size:20px; font-family:Amethysta;"> (sheher) </span></h2>
     
     <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b class="under">high school senior</b> graduating in december '24 🏳️‍🌈♿. i'm a non traditional student from india hoping to pursue a criminal justice major in college to eventually establish a career in cybercriminal law.
+      <!-- <br><br> -->
+    i've only recently started getting tech and hackclub's #arcade has been one of my main motivators throughout the summer by rewarding me for staring at a screen the whole day (hah! take that, mom). 
       <br><br>
-    i've only recently started getting tech and hackclub's #arcade has been one of my main motivators throughout the summer. i'm into basic design stuff; enjoy listening to indie music, playing the piano, and learning foreign languages (i speak five!).
-      <br><br>
-      i'm <b class="under"> currently using</b> figma, procreate, ibispaint, canva, blender and adobe illustrator and i'm pretty much a beginner even though i enjoy drawing a lot. since i have nothing else to do all summer long, i'm pretty much staring at my screen the entire day.
+      i'm <b class="under"> currently using</b> figma, procreate, ibispaint, canva, blender and adobe illustrator and i'm pretty much a beginner even though i've always enjoyed drawing and painting. i build dashboards and cute notes using notion and am hoping to win an ipad so i can start using goodnotes for cuter handwritten digital notes :)
       <br> 
       <br>
       i'm <b class="under">currently working on</b> my hack club #arcade scrapbook projects (for onboard, fraps and boba drops) and keeping up my #100daysofcode streak while practicing problems through online courses and code challenges. i'm interested in building my portfolio on a holistic level so i'm also working on a few personal projects that are not tech related as well. 
@@ -49,7 +49,7 @@
       <br><br>
       i'm <b class="under"> currently learning </b> html, css, and vanilla javascript, the basics of python, introductory cybersecurity concepts and introductory electronics with printed circuit boards and circuit simulations. i've recently transitioned to linux and am working my way around it while reading up on data privacy and cyberspace law.
       <br><br>
-      i love listening to taylor swift, reading feminist theory and watching true crime documentaries. i love consuming and creating media and try to keep up with some of the latest pop culture trends. i sometimes chug like 12 cans of diet coke or energy drinks in a day and love pairing a chinese takeout dinner with a classic film or murder mystery.
+      i love listening to taylor swift, reading feminist theory and watching true crime documentaries. i love consuming and creating media (films, books, music, games etc.) and try to keep up with latest pop culture trends and jokes. i'm into basic designing stuff; enjoy indie music, playing the piano, baking cakes and learning foreign languages. i chug like 12 cans of diet coke and energy drinks in a day and love pairing pizza or chinese takeout dinner with a classic film or murder mystery.
       <br><br>
       
       you can also find me on <a href="pinterest.com/4noushkabh" style="color:black;">pinterest</a>, goodreads, <a href="github.com/arsoninstigator" style="color:black;">github</a>, letterboxd or spotify. feel free to ask me for my socials or contact me via <a href="mailto:arsoninstigator@proton.me" style="color:black;">email</a>, discord or <a href="https://hackclub.slack.com/team/U07BBK4KHUK" style="color:black;">slack</a> and i'll get back to you as soon as possible. </div>
