--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     
     <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b class="under">high school senior</b> graduating in december '24 🏳️‍🌈♿. i'm a non traditional student from india hoping to pursue a criminal justice major in college to eventually establish a career in cybercriminal law.
       <!-- <br><br> -->
-    i've only recently started getting tech and hackclub's #arcade has been one of my main motivators throughout the summer by rewarding me for staring at a screen the whole day (hah! take that, mom). 
+    i've only recently started getting into tech and hackclub's #arcade has been my main motivator throughout the summer by rewarding me for staring at a screen the whole day (hah! take that, mom). 
       <br><br>
       i'm <b class="under"> currently using</b> figma, procreate, ibispaint, canva, blender and adobe illustrator and i'm pretty much a beginner even though i've always enjoyed drawing and painting. i build dashboards and cute notes using notion and am hoping to win an ipad so i can start using goodnotes for cuter handwritten digital notes :)
       <br> 
@@ -49,7 +49,7 @@
       <br><br>
       i'm <b class="under"> currently learning </b> html, css, and vanilla javascript, the basics of python, introductory cybersecurity concepts and introductory electronics with printed circuit boards and circuit simulations. i've recently transitioned to linux and am working my way around it while reading up on data privacy and cyberspace law.
       <br><br>
-      i love listening to taylor swift, reading feminist theory, watching true crime documentaries and consuming and creating media (films, books, music, games, art etc.). i try to keep up with latest pop culture trends and am into basic designing stuff; enjoy indie music, playing the piano, baking cakes and learning foreign languages. i chug like twelve cans of diet coke and energy drinks in a day and love pairing pizza or chinese takeout dinner with a classic film or murder mystery. finally, i love procrastinating, daydreaming, yapping about irrelevant shit, crying my eyes out and aimlessly scrolling on tiktok till i start feeling physically sick (yay!)
+      i love listening to taylor swift, reading feminist theory, watching true crime documentaries and consuming and creating media (films, books, music, games etc.). i try to keep up with latest pop culture trends, am into basic designing stuff; enjoy indie music, playing the piano, baking cakes and learning foreign languages. i chug like twelve cans of diet coke and energy drinks in a day and love pairing pizza or chinese takeout dinner with a classic film or murder mystery. finally, i love procrastinating, daydreaming, yapping about irrelevant shit, crying my eyes out and aimlessly scrolling on tiktok till i start feeling physically sick (yay!)
       <br><br>
       
       you can also find me on <a href="pinterest.com/4noushkabh" style="color:black;">pinterest</a>, goodreads, <a href="github.com/arsoninstigator" style="color:black;">github</a>, letterboxd or spotify. feel free to ask me for my socials or contact me via <a href="mailto:arsoninstigator@proton.me" style="color:black;">email</a>, discord or <a href="https://hackclub.slack.com/team/U07BBK4KHUK" style="color:black;">slack</a> and i'll get back to you as soon as possible. </div>
