--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
       <!-- <br><br> -->
     i've only recently started getting into tech and hackclub's #arcade has been my main motivator throughout the summer by rewarding me for staring at a screen the whole day (hah! take that, mom). 
       <br><br>
-      i'm <b class="under"> currently using</b> figma, procreate, ibispaint, canva, blender and adobe illustrator and i'm pretty much a beginner even though i've always enjoyed drawing and painting. i build dashboards and cute notes using notion and am hoping to <mark style="background-color: #F7B5CA;
+      i'm <b class="under"> currently using</b> figma, procreate, ibispaint, canva, blender and adobe illustrator and i'm pretty much a beginner even though i've always enjoyed drawing and painting. i build dashboards and cute notes using notion and am hoping to <mark style="background-color: #F7B5CA; line-height: 0.8;
   color: black;">win an ipad</mark> so i can start using goodnotes for cuter handwritten digital notes :)
       <br> 
       <br>
-      i'm <b class="under">currently working on</b> my hack club #arcade scrapbook projects (for onboard, fraps and boba drops) and keeping up my #100daysofcode streak while practicing problems through online courses and code challenges. i'm interested in building my portfolio on a holistic level so i'm also working on a few personal projects that are not tech related as well. 
+      i'm <b class="under">currently working on</b> hack club # arcade hours, my hc scrapbook projects (for onboard pcbs, fraps 3d dev, sprig games, bin circuits and bobadrops webdev) and keeping up my #100daysofcode streak while practicing problems through online courses and code challenges. i'm interested in building my portfolio on a holistic level so i'm also working on a few personal projects that are not tech related as well. 
       these include my music ventures since i've been trying to get into music production (using ableton) and am currently <mark style="background-color: #F7B5CA;
   color: black;">experimenting with visual synth and different styles</mark> to try to figure out what suits "me" (aka my brand, i guess).
       <br><br>
